--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma build && next build",
+    "generate": "prisma generate",
     "start": "next start",
     "lint": "next lint",
     "migrate": "npx prisma generate && npx prisma migrate dev"
